update: rewrite wavify with hooks and function components (not yet rdy)

--- a/package.json
+++ b/package.json
@@ -5,16 +5,16 @@
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
-    "react": "16.12.0",
-    "react-dom": "16.12.0",
-    "react-scripts": "3.0.1",
-    "react-wavify": "1.2.2"
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
+    "react-scripts": "3.4.3",
+    "react-wavify": "1.4.0"
   },
   "devDependencies": {
-    "typescript": "3.3.3"
+    "typescript": "4.0.2"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "dev": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
